feat: 完善 Agent 工具契约与会话校验
拆分工具回答载荷与调试载荷，避免最终回复提示词暴露检索调试信息，同时在 trace 中保留完整观测数据。\n\n创建 Agent 会话时补充简历与知识库资源校验，并规范化重复知识库 ID，避免无效绑定进入会话状态。\n\n补充工具注册重复名校验及相关单元测试，收敛工具契约的边界行为。